build(storybook): build storybook

--- a/src/components/Colors.stories.mdx
+++ b/src/components/Colors.stories.mdx
@@ -49,8 +49,8 @@ import theme from "../shared/styles/theme";
   />
   <ColorItem
     title="secondary"
-    subtitle="error"
-    colors={[theme.colors.secondary.error]}
+    subtitle="danger"
+    colors={[theme.colors.secondary.danger]}
   />
   <ColorItem
     title="tertiary"
@@ -69,8 +69,8 @@ import theme from "../shared/styles/theme";
   />
   <ColorItem
     title="tertiary"
-    subtitle="bgError"
-    colors={[theme.colors.tertiary.bgError]}
+    subtitle="bgDanger"
+    colors={[theme.colors.tertiary.bgDanger]}
   />
   <ColorItem
     title="tertiary"
@@ -84,8 +84,8 @@ import theme from "../shared/styles/theme";
   />
   <ColorItem
     title="tertiary"
-    subtitle="hoverDestroyPressed"
-    colors={[theme.colors.tertiary.hoverDestroyPressed]}
+    subtitle="pressedDestroy"
+    colors={[theme.colors.tertiary.pressedDestroy]}
   />
 
 </ColorPalette>
